client/my-sites/themes/style.scss
.themes-thanks-modal  {
	width: 300px;
	padding: 1.5em;
	min-height: 245px;

	@include breakpoint( "<480px" ) {
		box-sizing: border-box;
		width: 100%;
	}


	h1 {
		display: block;
		font-weight: 300;
		line-height: 1.5em;
		margin-bottom: 4rem;
		text-align: center;
		height: auto;

		p {
			margin: 0;
		}
	}

	ul {
		display: block;
		margin-left: 10px;
	}
}

.themes__selection .themes-list {
	margin-top: 24px;
}

.themes__site-selector-modal {
	padding-bottom: 24px;

	.site-selector-modal__content {
		.theme {
			@include breakpoint( ">480px" ) {
				width: 300px;
			}
			margin-left: auto;
			margin-right: auto;
		}

		h1 {
			text-align: center;
			font-weight: 300;
			margin-bottom: 0;
		}

		>h2 {
			text-align: center;
			font-size: 0.75em;
			line-height: 0.75em;
		}
	}
}

.sticky-panel .themes__search-card {
	transition: 0.3s box-shadow;
}

.sticky-panel.is-sticky .themes__search-card {
	box-shadow: 0 0 0 1px transparentize( lighten( $gray, 20% ), .5 ),
	0 2px 4px lighten( $gray, 20% );
}

.themes__sheet {
	max-width: none;
}

.themes__sheet-bar
{
	background-color: $blue-wordpress;
	color: white;
	height: 180px;
	padding: 0;
	margin: 0;
}

.themes__sheet-bar-title {
	display: block;
	font-size: 33px;
	font-weight: 100;
	padding-top: 70px;
	padding-left: 25px;
	line-height: 1;
}

.themes__sheet-bar-tag {
	max-width: none;
	display: block;
	color: rgba(255, 255, 255, 0.6);
	font-size: 16px;
	font-weight: 200;
	padding-top: 5px;
	padding-left: 25px;
}

.themes__sheet-columns {
	display: flex;
	flex-direction: row;
}

.themes__sheet-column-left {
	display: flex;
	width: 50%;
	flex-direction: column;

}

.themes__sheet-column-right {
	display: flex;
	width: 50%;
	flex-direction: column;
}

.themes__sheet-action-bar {
	height: 50px;
	width: 100%;
}

.themes_sheet-action-bar-spacer {
	height: 50px;
	width: 100%;
	background-color: white;
}

.themes__sheet-action-bar button {
	margin: 2px;
}

.themes__sheet-button-placeholder {
	color: transparent;
}

.themes__sheet-action-bar-cost {
	font-weight: 600;
	color: #4AB866;
	margin-left: 10px;
	display: inline-block;
	max-width: 50%;
}

.themes__sheet-action-bar-container {
	display: flex;
	align-items: center;
	justify-content: flex-end;
}


.themes__sheet-action-bar .header-cake__back {
	padding: 16px 0px 16px 16px;
}

.themes__sheet-action-bar .is-spacer {
	width: 0;
}

.themes__sheet-screenshot {
	display: block;
	position: absolute;
	top: 90px;
	width: 49%;
	box-shadow: 0px 2px 8px 0px rgba(46,68,83,0.45);
}

.themes__sheet-screenshot:before {
	content: "";
	display: block;
	// 4:3 screenshot ratio
	padding-top: 75%;
	background-color: transparentize( white, 0.5 );
}

.themes__sheet-img {
	position: absolute;
		top: 0;
		left: 0;
	width: 100%;
	height: 100%;
	border: 1px solid $gray;
}

.themes__sheet-content {
	padding: 20px;
	// whilst loading
	min-height: 900px;

	div {
		// override inline style in content markup
		width: auto !important;
	}
}

.themes__sheet-placeholder {
	color: transparent;
	background-color: rgba(255, 255, 255, 0.4);
	animation: loading-fade 1.6s ease-in-out infinite;
}

.themes__sheet-features-list {
	text-align: center;
	margin: -0.78em 0;
	padding: 0;

	li {
		list-style: none;
		display: inline-block;
		background: #E9EFF3;
		color: $gray-dark;
		font-size: 0.925em;
		margin: 0.38em 0.37rem;
		padding: 0.25em 0.7em;
		border-radius: 3px;

		span {
			display: block;
		}
	}
}

.themes__sheet-card-support {
	display: flex;
	align-items: center;

	&:not(:last-child) {
		margin-bottom: 0;
	}

	@include breakpoint( "<660px" ) {
		flex-wrap: wrap;
	}

	.gridicon {
		color: lighten( $gray, 20% );
		flex: 0 0 auto;
	}

	.button {
		flex: 0 0 auto;

		@include breakpoint( "<660px" ) {
			flex: 1 1 100%;
			margin-top: 20px;
			text-align: center;
		}
	}
}

.themes__sheet-card-support-details {
	flex: 1 1 20px;
	padding-left: 20px;

	small {
		display: block;
		color: $gray;
	}
}

.footer__line {
	color: lighten( $gray, 20% );
	border-top: 1px solid lighten( $gray, 20% );
	margin: 32px 0 20px;

	.gridicon {
		display: block;
		margin: -12px auto 0;
		background: $gray-light;
	}
}

@include breakpoint( "<660px" ) {
	.themes__sheet-columns {
		flex-direction: column-reverse;
	}

	.themes__sheet-column-left {
		width: 100%;
	}

	.themes__sheet-column-right {
		width: 100%;
	}

	.themes__sheet-screenshot {
		position: relative;
		top: 0;
		width: 100%;
	}

	.themes_sheet-action-bar-spacer {
		display: none;
	}

	.themes__sheet-screenshot {
		box-shadow: none;
	}

	.themes__sheet-screenshot:before {
		background: linear-gradient( to bottom, transparentize( white, 0.5 ), transparent );
	}
}

